Added temp registry
